--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^3.0.3",
+        "vee-validate": "^4.6.9",
         "vue": "^3.2.37",
-        "vue-router": "^4.1.3"
+        "vue-router": "^4.1.3",
+        "yup": "^0.32.11"
     }
 }
