--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vee-validate": "^4.6.9",
         "vue": "^3.2.37",
         "vue-router": "^4.1.3",
+        "vuex": "^4.0.2",
         "yup": "^0.32.11"
     }
 }
